@@ -1,3 +1,9 @@
+Thu May 22 13:56:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tests/DCPS/ManyToMany/DataReaderListener.cpp:
+
+          Improved error reporting.
+
 Wed May 21 20:34:12 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.cpp:
